ensure overview nav has horizontal padding on mobiles

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -104,7 +104,7 @@ nav li {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
-  padding: 5px 0;
+  padding: 5px;
   border-radius: 5px;
 }
 
